--- a/tasma/package-manager/po/it.po
+++ b/tasma/package-manager/po/it.po
@@ -1,24 +1,25 @@
-# SOME DESCRIPTIVE TITLE.
+# translation of it.po to Italian
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the PACKAGE package.
-# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
-#, fuzzy
+# Andrea Decorte <adecorte@gmail.com>, 2007.
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: it\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-12-12 16:20+0200\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
+"PO-Revision-Date: 2007-03-24 00:02+0200\n"
+"Last-Translator: Andrea Decorte <adecorte@gmail.com>\n"
+"Language-Team: Italian <pardus-translation-it@pardus.org.tr>\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=CHARSET\n"
+"Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"X-Generator: KBabel 1.11.4\n"
+"Plural-Forms:  nplurals=2; plural=(n != 1);\n"
 
 #: src/ProgressDialog.py:91
 msgid "Progress"
-msgstr ""
+msgstr "Progresso"
 
 #: src/ProgressDialog.py:92 src/Progress.py:82
 msgid "-- / --  package"
@@ -47,28 +48,28 @@ msgstr ""
 #: src/Tray.py:44 src/package-manager.py:273 src/package-manager.py:662
 #: src/package-manager.py:809
 msgid "All"
-msgstr ""
+msgstr "Tutti"
 
 #: src/Tray.py:64
 msgid "There are <b>%1</b> updates available!"
-msgstr ""
+msgstr "Ci sono <b>%1</b> aggiornamenti disponibili!"
 
 #: src/CustomEventListener.py:47 src/CustomEventListener.py:51
 #: src/package-manager.py:299
 msgid "Select all packages in this category"
-msgstr ""
+msgstr "Seleziona tutti i pacchetti in questa categoria"
 
 #: src/CustomEventListener.py:48 src/package-manager.py:301
 msgid "Reverse package selections"
-msgstr ""
+msgstr "Selezione invertita dei pacchetti"
 
 #: src/BalloonMessage.py:44
 msgid "Show Updates"
-msgstr ""
+msgstr "Mostra aggiornamenti"
 
 #: src/BalloonMessage.py:45
 msgid "Ignore"
-msgstr ""
+msgstr "Ignora"
 
 #: src/RepoDialog.py:72
 msgid "Repository Dialog"
@@ -76,11 +77,11 @@ msgstr ""
 
 #: src/RepoDialog.py:73
 msgid "&Ok"
-msgstr ""
+msgstr "&OK"
 
 #: src/RepoDialog.py:75
 msgid "Repository &Address"
-msgstr ""
+msgstr "&Indirizzo repository"
 
 #: src/RepoDialog.py:76
 msgid "Adress of the repository, e.g <b>http://foo.bar.com/pisi-index.xml</b>"
@@ -88,11 +89,11 @@ msgstr ""
 
 #: src/RepoDialog.py:79
 msgid "http://paketler.pardus.org.tr/pardus-1.1/pisi-index.xml.bz2"
-msgstr ""
+msgstr "http://paketler.pardus.org.tr/pardus-1.1/pisi-index.xml.bz2"
 
 #: src/RepoDialog.py:80
 msgid "Repository &Name"
-msgstr ""
+msgstr "&Nome repository"
 
 #: src/RepoDialog.py:81
 msgid "Name of the repository, e.g <b>pardus-devel</b>"
@@ -104,7 +105,7 @@ msgstr ""
 
 #: src/BasketDialog.py:63
 msgid "Selected package(s) for removal:"
-msgstr ""
+msgstr "Pacchetti selezionati per la rimozione:"
 
 #: src/BasketDialog.py:64
 msgid ""
@@ -124,7 +125,7 @@ msgstr ""
 
 #: src/BasketDialog.py:69
 msgid "Selected package(s) for upgrade:"
-msgstr ""
+msgstr "Pacchetti selezionati per l'aggiornamento:"
 
 #: src/BasketDialog.py:70
 msgid ""
@@ -134,7 +135,7 @@ msgstr ""
 
 #: src/BasketDialog.py:78
 msgid "Total Size:"
-msgstr ""
+msgstr "Dimensioni totali:"
 
 #: src/BasketDialog.py:85
 msgid "Update Basket"
@@ -142,41 +143,41 @@ msgstr ""
 
 #: src/BasketDialog.py:161
 msgid "Total Size: <b>%1</b>"
-msgstr ""
+msgstr "Dimensioni totali: <b>%1</b>"
 
 #: src/BasketDialog.py:211 src/BasketDialog.py:213
 msgid "Size: "
-msgstr ""
+msgstr "Dimensioni:"
 
 #: src/HelpDialog.py:28 src/package-manager.py:942
 msgid "Package Manager Help"
-msgstr ""
+msgstr "Aiuto sul gestore di pacchetti"
 
 #: src/Preferences.py:77
 msgid "Add New Repository"
-msgstr ""
+msgstr "Aggiungi nuovo repository"
 
 #: src/Preferences.py:84
 msgid "Edit Repository"
-msgstr ""
+msgstr "Modifica repository"
 
 #: src/Preferences.py:130 src/Preferences.py:146
 msgid ""
 "<qt>Repository address should end with xml or xml.bz2 suffix.<p>Please try "
 "again.</qt>"
-msgstr ""
+msgstr "<qt>L'indirizzo di un repository dovrebbe terminare con un'estensione xml o xml.bz2 suffix.<p>Per favore controlla il dato inserito.</qt>"
 
 #: src/Preferences.py:130 src/Preferences.py:146
 msgid "Pisi Error"
-msgstr ""
+msgstr "Errore di PiSi"
 
 #: src/Preferences.py:178 src/package-manager.py:738
 msgid "<b>Applying Repository Changes</b>"
-msgstr ""
+msgstr "<b>Applicazione dei cambiamenti ai repository</b>"
 
 #: src/Preferences.py:210
 msgid "All the cached packages will be deleted. Are you sure? "
-msgstr ""
+msgstr "Tutti i pacchetti nella cache verranno cancellati. Sei sicuro di voler proseguire?"
 
 #: src/Progress.py:51
 msgid "downloaded ( total: %1 )"
@@ -196,15 +197,15 @@ msgstr ""
 
 #: src/Progress.py:141
 msgid "installed"
-msgstr ""
+msgstr "installato"
 
 #: src/Progress.py:143
 msgid "removed"
-msgstr ""
+msgstr "rimosso"
 
 #: src/Progress.py:145
 msgid "upgraded"
-msgstr ""
+msgstr "aggiornato"
 
 #: src/Progress.py:147
 msgid "%1 / %2 package %3"
@@ -212,27 +213,27 @@ msgstr ""
 
 #: src/Commander.py:64
 msgid "Can't connect to Comar daemon"
-msgstr ""
+msgstr "Impossibile collegarsi al demone COMAR"
 
 #: src/Commander.py:99
 msgid "You do not have permission to do this operation."
-msgstr ""
+msgstr "Non hai i permessi necessari a eseguire questa operazione."
 
 #: src/package-manager.py:47
 msgid "GUI for PiSi package manager"
-msgstr ""
+msgstr "GUI per il gestore di pacchetti PiSi"
 
 #: src/package-manager.py:55 src/package-manager.py:870
 msgid "Package Manager"
-msgstr ""
+msgstr "Gestore di pacchetti"
 
 #: src/package-manager.py:58
 msgid "Developer and Current Maintainer"
-msgstr ""
+msgstr "Sviluppatore e manutentore corrente"
 
 #: src/package-manager.py:59
 msgid "Original Author"
-msgstr ""
+msgstr "Autore originale"
 
 #: src/package-manager.py:60
 msgid "CSS/JS Meister"
@@ -240,19 +241,19 @@ msgstr ""
 
 #: src/package-manager.py:61
 msgid "GUI Design & Usability"
-msgstr ""
+msgstr "Design & Usabilità della GUI"
 
 #: src/package-manager.py:62
 msgid "PiSi Authors"
-msgstr ""
+msgstr "Autori di PiSi"
 
 #: src/package-manager.py:62
 msgid "Authors of PiSi API"
-msgstr ""
+msgstr "Autori delle API di PiSi"
 
 #: src/package-manager.py:113
 msgid "Search: "
-msgstr ""
+msgstr "Cerca:"
 
 #: src/package-manager.py:117
 msgid "Show basket"
@@ -260,15 +261,15 @@ msgstr ""
 
 #: src/package-manager.py:122 src/package-manager.py:229
 msgid "Install Package(s)"
-msgstr ""
+msgstr "Installa pacchetti"
 
 #: src/package-manager.py:143
 msgid "Components"
-msgstr ""
+msgstr "Componenti"
 
 #: src/package-manager.py:171
 msgid "Loading Package List..."
-msgstr ""
+msgstr "Caricamento lista dei pacchetti..."
 
 #: src/package-manager.py:207
 msgid ""
@@ -278,7 +279,7 @@ msgstr ""
 
 #: src/package-manager.py:208
 msgid "Package database is empty"
-msgstr ""
+msgstr "Il database dei pacchetti è vuoto"
 
 #: src/package-manager.py:245
 msgid "Remove Package(s)"
@@ -290,35 +291,34 @@ msgstr ""
 
 #: src/package-manager.py:368
 msgid "N\\A"
-msgstr ""
+msgstr "N\\D"
 
 #: src/package-manager.py:385
 msgid "Description: "
-msgstr ""
+msgstr "Descrizione: "
 
 #: src/package-manager.py:385
 msgid "Version: "
-msgstr ""
+msgstr "Versione: "
 
 #: src/package-manager.py:386
 msgid "Package Size: "
-msgstr ""
+msgstr "Dimensioni pacchetto: "
 
 #: src/package-manager.py:386
 msgid "Homepage: "
-msgstr ""
+msgstr "Homepage: "
 
 #: src/package-manager.py:401 src/package-manager.py:670
 msgid "Search Results"
-msgstr ""
+msgstr "Risultati della ricerca"
 
 #: src/package-manager.py:434
 msgid "Currently your basket is empty."
 msgstr ""
 
 #: src/package-manager.py:437 src/package-manager.py:445
-msgid ""
-"Currently there are <b>%1</b> selected package(s) of total <b>%2</b> of size "
+msgid "Currently there are <b>%1</b> selected package(s) of total <b>%2</b> of size "
 msgstr ""
 
 #: src/package-manager.py:440
@@ -341,7 +341,7 @@ msgstr ""
 
 #: src/package-manager.py:480 src/package-manager.py:490
 msgid "Conflict Error"
-msgstr ""
+msgstr "Conflitto"
 
 #: src/package-manager.py:486
 msgid "The following packages conflicts:\n"
@@ -410,7 +410,7 @@ msgstr ""
 
 #: src/package-manager.py:534
 msgid "<br>Do you want to continue?</qt>"
-msgstr ""
+msgstr "<br>Desideri proseguire?</qt>"
 
 #: src/package-manager.py:554
 msgid "<b>Removing Package(s)</b>"
@@ -422,7 +422,7 @@ msgstr ""
 
 #: src/package-manager.py:654
 msgid "Others"
-msgstr ""
+msgstr "Altri"
 
 #: src/package-manager.py:695 src/CommonText.py:15
 msgid "downloading"
@@ -438,88 +438,87 @@ msgstr ""
 
 #: src/package-manager.py:752
 msgid "Confirm"
-msgstr ""
+msgstr "Conferma"
 
 #: src/package-manager.py:916
 msgid "Show Installed Packages"
-msgstr ""
+msgstr "Mostra pacchetti installati"
 
 #: src/package-manager.py:919
 msgid "Show New Packages"
-msgstr ""
+msgstr "Mostra nuovi pacchetti"
 
 #: src/package-manager.py:921
 msgid "Show Upgradable Packages"
-msgstr ""
+msgstr "Mostra pacchetti aggiornabili"
 
 #: src/package-manager.py:955
 msgid "Package to install"
-msgstr ""
+msgstr "Pacchetto da installare"
 
 #: src/package-manager.py:955
 msgid "Show main window on startup"
-msgstr ""
+msgstr "Mostra la finestra principale all'avvio"
 
 #: src/package-manager.py:958
 msgid "Package Manager is already running!"
-msgstr ""
+msgstr "Il gestore di pacchetti è già in esecuzione!"
 
 #: src/pm-install.py:33
 msgid "PiSi package to install"
-msgstr ""
+msgstr "Pacchetto PiSi da installare"
 
 #: src/pm-install.py:50
 msgid "You have selected a package to install. Do you want to continue?"
-msgstr ""
+msgstr "Hai selezionato un pacchetto da installare. Desideri proseguire?"
 
 #: src/pm-install.py:51
 msgid "Install Package"
-msgstr ""
+msgstr "Installazione pacchetto"
 
 #: src/PreferencesDialog.py:53 src/PreferencesDialog.py:191
 msgid "Repository Name"
-msgstr ""
+msgstr "Nome repository"
 
 #: src/PreferencesDialog.py:54 src/PreferencesDialog.py:192
 msgid "Address"
-msgstr ""
+msgstr "Indirizzo"
 
 #: src/PreferencesDialog.py:184
 msgid "Package Manager Settings"
-msgstr ""
+msgstr "Impostazioni del gestore di pacchetti"
 
 #: src/PreferencesDialog.py:186
 msgid "F1"
-msgstr ""
+msgstr "F1"
 
 #: src/PreferencesDialog.py:193
-msgid ""
-"You can see current software repositories and corresponding addresses here"
+msgid "You can see current software repositories and corresponding addresses here"
 msgstr ""
 
 #: src/PreferencesDialog.py:194
 msgid "&Add New Repository"
-msgstr ""
+msgstr "&Aggiungi nuovo repository"
 
 #: src/PreferencesDialog.py:195
 msgid "Click here to add a new software repository"
-msgstr ""
+msgstr "Clicca qui per aggiungere un nuovo repository di software"
 
 #: src/PreferencesDialog.py:196
 msgid "&Edit Repository"
-msgstr ""
+msgstr "&Modifica repository"
 
 #: src/PreferencesDialog.py:197
 msgid "Click here to modify the name or address of a repository"
-msgstr ""
+msgstr "Clicca qui per modificare il nome o l'indirizzo di un repository"
 
 #: src/PreferencesDialog.py:198
 msgid "&Remove Repository"
-msgstr ""
+msgstr "&Rimuovi repository"
 
 #: src/PreferencesDialog.py:199
 msgid "Click here to delete a repository from the list"
-msgstr ""
+msgstr "Clicca qui per eliminare un repository dalla lista"
 
 #: src/PreferencesDialog.py:200
 msgid "Move &Up"
@@ -539,15 +538,15 @@ msgstr ""
 
 #: src/PreferencesDialog.py:204
 msgid "&Repositories"
-msgstr ""
+msgstr "&Repository"
 
 #: src/PreferencesDialog.py:205
 msgid "&Show only desktop applications"
-msgstr ""
+msgstr "Mostra &solo applicazioni desktop"
 
 #: src/PreferencesDialog.py:206
 msgid "If checked, then pisi will only show desktop applications"
-msgstr ""
+msgstr "Se selezionato, PiSi mostrerà solo le applicazioni per desktop"
 
 #: src/PreferencesDialog.py:207
 msgid "Enable &interval upgradable package checking"
@@ -555,23 +554,23 @@ msgstr ""
 
 #: src/PreferencesDialog.py:208
 msgid "&Enable system tray icon"
-msgstr ""
+msgstr "&Attiva l'icona nel vassoio di sistema"
 
 #: src/PreferencesDialog.py:209
 msgid "Check interval:"
-msgstr ""
+msgstr "Intervallo di controllo"
 
 #: src/PreferencesDialog.py:210
 msgid " min"
-msgstr ""
+msgstr " min"
 
 #: src/PreferencesDialog.py:211
 msgid "&General Settings"
-msgstr ""
+msgstr "Impostazioni &generali"
 
 #: src/PreferencesDialog.py:212
 msgid "Clear Cache"
-msgstr ""
+msgstr "Pulizia cache"
 
 #: src/PreferencesDialog.py:213
 msgid "C&lean disk cache now"
@@ -589,7 +588,7 @@ msgstr ""
 
 #: src/PreferencesDialog.py:217
 msgid "Maximum cache size:"
-msgstr ""
+msgstr "Dimensioni massime cache:"
 
 #: src/PreferencesDialog.py:218
 msgid "&Use hard disk cache for downloaded software"
@@ -601,24 +600,25 @@ msgstr ""
 
 #: src/PreferencesDialog.py:220
 msgid "Mb <i>(use 0 for no limit)</i>"
-msgstr ""
+msgstr "Mb <i>(usa 0 per illimitato)</i>"
 
 #: src/PreferencesDialog.py:221
 msgid "C&ache"
-msgstr ""
+msgstr "C&ache"
 
 #: src/CommonText.py:15
 msgid "extracting"
-msgstr ""
+msgstr "estraendo"
 
 #: src/CommonText.py:15
 msgid "configuring"
-msgstr ""
+msgstr "configurando"
 
 #: src/CommonText.py:15
 msgid "removing"
-msgstr ""
+msgstr "rimuovendo"
 
 #: src/CommonText.py:15
 msgid "installing"
-msgstr ""
+msgstr "installando"
+
