--- a/tasma/disk-manager/po/ca.po
+++ b/tasma/disk-manager/po/ca.po
@@ -2,15 +2,15 @@
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the PACKAGE package.
 #
-# Pau Amaro-Seoane <pau@ippimail.com>, 2007.
+# Jaume Villalba Sanchez <javs@tinet.cat>, 2007.
 msgid ""
 msgstr ""
 "Project-Id-Version: disk-manager\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2007-02-19 10:50+0200\n"
 "PO-Revision-Date: 2007-03-23 16:57+0100\n"
-"Last-Translator: Pau Amaro-Seoane <pau@ippimail.com>\n"
-"Language-Team: Catala <ca@li.org>\n"
+"Last-Translator: Jaume Villalba Sanchez <javs@tinet.cat>\n"
+"Language-Team: Catala <pardus-translation-ca@liste.uludag.org.tr>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
