--- a/tasma/firewall-config/po/ca.po
+++ b/tasma/firewall-config/po/ca.po
@@ -2,15 +2,15 @@
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the PACKAGE package.
 #
-# Pau Amaro-Seoane <pau@ippimail.com>, 2007.
+# Pau Amaro-Seoane <pau@aei.mpg.de>, 2007.
 msgid ""
 msgstr ""
 "Project-Id-Version: firewall-config\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-11-22 16:41+0200\n"
 "PO-Revision-Date: 2007-03-18 19:53+0100\n"
-"Last-Translator: Pau Amaro-Seoane <pau@ippimail.com>\n"
-"Language-Team: Catala <ca@li.org>\n"
+"Last-Translator: Pau Amaro-Seoane <pau@aei.mpg.de>\n"
+"Language-Team: Catala <pardus-translation-ca@ns1.uludag.org.tr>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
